<resources>
    <string name="mapp_name">MaterialManage</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginname_hint">用户名</string>
    <string name="loginpassword_hint">密码</string>
    <string name="login_button">登陆</string>
    <string name="sign_button">注册</string>
    <string name="logo_content">物料管理</string>
    <string name="logoin_empty_hint">请输入用户名和密码</string>
    <string name="logoin_success">登录成功</string>
    <string name="logoin_fail">用户名或密码错误</string>
    <string name="con_server_fail">网络连接错误</string>

    <string name="tab_loading">入库</string>
    <string name="tab_unloading">出库</string>
    <string name="tab_distribution">配料</string>
    <string name="tab_line">产线</string>
    <string name="tab_check">点检</string>
    <string name="tab_set">设置</string>

    <string name="printer_label">打印机标签选择</string>
    <string name="printer_hander">手动打印标签</string>
    <string name="printer_opt">打印机</string>

    <string name="app_version">版本:</string>
    <string name="update_data">更新数据</string>
    <string name="quit">退出登录</string>
    <string name="other_opt">其他</string>
    <string name="data_opt">数据</string>

    <string name="search_title">搜索</string>
    <string name="add_title">添加列表</string>
    <string name="clear_title">清空列表</string>
    <string name="cam_title">扫一扫</string>

    <string name="cancle">取消</string>
    <string name="sure">确定</string>
    <string name="print">打印</string>

    <string name="no_record">没有记录</string>
    <string name="reloading_title">换料扫描</string>

    <string name="sort_name">产品名称排序</string>
    <string name="sort_code">材料编码排序</string>
    <string name="sort_line">线别排序</string>
    <string name="version">1.3</string>
    <string name="show_version">版本:V1.3</string>

</resources>
