<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/line_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="70"
        android:title="@string/search_title"
        android:visible="false"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/line_add"
        android:icon="@mipmap/ic_add_white_24dp"
        android:orderInCategory="80"
        android:title="@string/add_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/line_cam"
        android:icon="@mipmap/ic_camera_alt_white_24dp"
        android:orderInCategory="90"
        android:title="@string/cam_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/line_reloading"
        android:orderInCategory="100"
        android:title="@string/reloading_title"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/line_clear"
        android:orderInCategory="110"
        android:title="@string/clear_title"
        app:showAsAction="collapseActionView" />

</menu>