<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    android:orientation="vertical">
    <include layout="@layout/include_toolbar"/>

    <TextView
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:text="@string/printer_opt"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/layout_selector"
        >
        <TextView
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/printer_label"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/layout_selector"
        >
        <TextView
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/printer_hander"
            />
    </RelativeLayout>

    <TextView
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:text="@string/other_opt"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/layout_selector"
        >
        <TextView
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/app_version"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/ly_quit"
        android:background="@drawable/layout_selector"
        >
        <TextView
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/quit"
            />
    </RelativeLayout>
</LinearLayout>